--- a/src/main.css
+++ b/src/main.css
@@ -22,5 +22,7 @@ h1 {
 
 img {
   margin: 20px 0;
-  max-width: 200px;
+  max-width: 200px !important;
+  height: 50px !important;
+  margin-left: 10px !important;
 }
